# ChangeLog for net-zope/zope-app-testing
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zope-app-testing/Attic/ChangeLog,v 1.6 2010/04/18 00:26:07 arfrever Exp $

*zope-app-testing-3.7.5 (18 Apr 2010)

  18 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-app-testing-3.7.4.ebuild, +zope-app-testing-3.7.5.ebuild:
  Version bump.

  14 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  zope-app-testing-3.7.4.ebuild:
  Add ~alpha/~sparc wrt #297734

  22 Jan 2010; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking zope-app-testing-3.7.4 ~ppc for bug 297734

  16 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  zope-app-testing-3.7.4.ebuild:
  added ~x86

*zope-app-testing-3.7.4 (16 Jan 2010)

  16 Jan 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-app-testing-3.7.3.ebuild, +zope-app-testing-3.7.4.ebuild:
  Version bump.

*zope-app-testing-3.7.3 (13 Dec 2009)

  13 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-app-testing-3.7.3.ebuild, +metadata.xml:
  Initial addition. Ebuild written by me.
